examples-generated/oncall/v1alpha1/route.yaml
apiVersion: oncall.grafana.crossplane.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: oncall/v1alpha1/route
  labels:
    testing.upbound.io/example-name: example_route
  name: example-route
spec:
  forProvider:
    escalationChainId: ${grafana_oncall_escalation_chain.default.id}
    integrationId: ${grafana_oncall_integration.example_integration.id}
    msteams:
    - enabled: false
      id: ONCALLMSTEAMSID
    position: 0
    routingRegex: us-(east|west)
    slack:
    - channelId: ${data.grafana_oncall_slack_channel.example_slack_channel.slack_id}
      enabled: true
    telegram:
    - enabled: true
      id: ONCALLTELEGRAMID
